# comm-ls

./: .gitignore  README.md  download_yf_tickers.sh  pyproject.toml
notebooks/: backtest_cl.ipynb  backtest_mt.ipynb
src/comm_ls/: __init__.py  annual_return_clusters.py  backtest.py  basket_cluster_risk.py  beta.py  candidates.py  capacity.py  cl_v32_strategy.py  cli.py  cluster_evolution.py  commodity.py  commodity_research.py  cross_product_summary.py  curve_diagnostics.py  data_access.py  discovery.py  edgar.py  eia_catalog.py  eia_release_validation.py  eia_series_selection.py  eia_series_shortlist.py  eia_wpsr_archive.py  eia_wpsr_crosswalk.py  eia_wpsr_evidence.py  eia_wpsr_incremental.py  eia_wpsr_release_index.py  eia_wpsr_review.py  eia_wpsr_states.py  environment.py  equity.py  event_regime.py  feature_basket.py  feature_matrix.py  forecast.py  fundamentals.py  macro.py  mechanism_alignment.py  mechanism_state.py  metals_complex.py  peer_expansion.py  (+16 more)
targets/: excluded_instruments.csv
targets/2026-06-18/: betas.csv  component_legs.csv  exclusion_candidates.csv  ib_review.csv  orders.csv  report.md  summary.csv  targets.csv
targets/2026-06-21/: betas.csv  component_legs.csv  orders.csv  report.md  summary.csv  targets.csv
targets/2026-06-21.raw_close_fix_20260623/: betas.csv  component_legs.csv  orders.csv  report.md  summary.csv  targets.csv
targets/2026-06-22/: report.md
targets/2026-06-23/: report.md
targets/2026-06-24/: report.md
targets/2026-06-25/: note.md  report.md
targets/2026-06-26/: report.md
targets/2026-06-29/: report.md
(+14 files in other folders)
