[project]
name = "comm-ls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chenxu", email = "chen.xu.wq@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ib-insync>=0.9.86",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "ruff>=0.15.17",
    "yfinance>=0.2.40",
]

[project.scripts]
comm-ls = "comm_ls:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "matplotlib>=3.10.9",
]
